Improved support for non-Windows operating systems.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "display-info",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Get display information for node.js",
   "main": "index.js",
   "keywords": [
@@ -29,7 +29,7 @@
   "gypfile": true,
   "dependencies": {
     "bindings": "^1.5.0",
-    "node-gyp": "^7.0.0",
-    "node-addon-api": "^3.0.0"
+    "node-addon-api": "^3.0.0",
+    "node-gyp": "^7.1.0"
   }
 }
